--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "sass": "^1.37.5"
+    "sass": "^1.37.5",
+    "serve": "^12.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
